--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.1.RELEASE</version>
+        <version>1.5.10.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -19,7 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.0.4</kotlin.version>
+        <kotlin.version>1.2.30</kotlin.version>
     </properties>
 
     <dependencies>
@@ -34,19 +34,16 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx.html.jvm</artifactId>
-            <version>latest-1.1.0-dev-4182-77</version>
+            <artifactId>kotlinx-html-jvm</artifactId>
+            <version>0.6.9</version>
         </dependency>
     </dependencies>
 
     <repositories>
         <repository>
-            <id>kotlin-exposed</id>
-            <url>https://dl.bintray.com/kotlin/exposed/</url>
-        </repository>
-        <repository>
-            <id>kotlin-dev</id>
-            <url>https://dl.bintray.com/kotlin/kotlin-dev/</url>
+            <id>jcenter</id>
+            <name>jcenter</name>
+            <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
 
